--- a/styles/main.css
+++ b/styles/main.css
@@ -172,3 +172,11 @@ h1 {
     border-bottom: 1px solid black;
 }
 
+.userWinningCombo {
+    background-color: #a8d695;
+}
+
+.aiWinningCombo {
+    background-color: #d695a9;
+}
+
