--- a/styles/main.css
+++ b/styles/main.css
@@ -180,3 +180,17 @@ h1 {
     background-color: #d695a9;
 }
 
+.drawSquare {
+    background-color: #b5b5b5;
+}
+
+@keyframes boardSquareAnimate {
+    from {font-size: 1px;}
+    to {font-size: 25px;}
+}
+
+.animate {
+    animation-name: boardSquareAnimate;
+    animation-duration: 0.75s;
+}
+
